# Any_where_door

./: INSTALL.md
anywhere_door_agent/: AUTH_INTEGRATION.md  AUTH_SERVICE.md  CHANGELOG.md  COMPLETE_ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  NETWORK_IMPLEMENTATION.md  NETWORK_INTEGRATION.md  NETWORK_SERVICE.md  NETWORK_SERVICE_SUMMARY.md  QUICK_REFERENCE.md  WINDOWS_TESTING.md  compile.txt  main.cpp  service.cpp  service.h
anywhere_door_agent/deploy/: SERVICE_SETUP.md
anywhere_door_agent/deploy/linux/: anywhere-door-agent.service
anywhere_door_agent/examples/: auth_demo.rs  device_authentication.rs  network_demo.rs
anywhere_door_agent/output/: .gitignore  anywheredoor  sample.txt  test_file_events.ndjson  watcher_probe.txt
anywhere_door_agent/scripts/: README.md  install-systemd.sh  install-windows-service.ps1  register-windows-service.ps1  uninstall-windows-service.ps1  uninstall.sh
anywhere_door_agent/src/: lib.rs  main.rs  service.rs  windows_service.rs
anywhere_door_agent/src/auth/: auth.rs  mod.rs
anywhere_door_agent/src/filesystem/: filesystem.rs  watcher.rs
anywhere_door_agent/src/net/: mod.rs  net.rs  websocket.rs
anywhere_door_agent/src/sync/: debounce.rs  mod.rs  pipeline.rs  queue.rs  uploader.rs
backend/: .env.example  .gitignore  BUILD_SUMMARY.md  QUICKSTART.md  README.md  any_where_door.db  auth_utils.py  config.py  database.py  example_client.py  main.py  models.py  requirements.txt  routes_agent.py  routes_auth.py  routes_files.py  routes_sync.py  routes_websocket.py  run_server.bat  run_server.sh  schemas.py  seed_db.py  (+3 more)
(+19 files in other folders)
