[package]
name = "anywhere_door_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.4"
walkdir = "2"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
hostname = "0.3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
